feat: adiciona suporte ao Playwright nos Dockerfiles
- Instala dependencias do sistema para Chromium
- Adiciona comando playwright install chromium
- Necessario para os 5 web scrapers de leilao

Gerado com Claude Code

--- a/Dockerfile.pipeline
+++ b/Dockerfile.pipeline
@@ -9,12 +9,30 @@ ENV TZ=America/Sao_Paulo
 # Diretorio de trabalho
 WORKDIR /app
 
-# Instala dependencias do sistema
+# Instala dependencias do sistema (incluindo Playwright/Chromium)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
     curl \
     cron \
+    # Dependencias do Playwright/Chromium
+    libnss3 \
+    libnspr4 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libxkbcommon0 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxrandr2 \
+    libgbm1 \
+    libasound2 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libatspi2.0-0 \
+    libgtk-3-0 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copia requirements primeiro (para cache)
@@ -22,6 +40,9 @@ COPY requirements.txt .
 
 # Instala dependencias Python
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Instala browsers do Playwright (apenas Chromium para economizar espaco)
+RUN playwright install chromium --with-deps || true
 
 # Copia codigo
 COPY . .
